tests/parser/tests/cases/should_fail/multi_code_point_char_literal/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:6
1 |   k := 'ab';
  |        ^^^^ here
  = note: Invalid character literal `ab`, character literals may only contain one codepoint 
